add features section

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
               <div class="row">
                 <div class="col-lg-12 col-xl-6 tablet-xl-top-45">
                   <div class="promo-left">
-                    <div class="promo-container-big">
-                      <div class="promo-big promo-icon-bg circle bg-primary raised-sm">
+                    <div class="promo-container-big d-flex px-3">
+                      <div class="promo-big promo-icon-bg me-5 circle bg-primary raised-sm">
                         <i class="fas fa-download promo-icon text-white fa-2xl"></i>
                       </div>
                       <!-- / promo-icon-bg -->
-                      <h2 class="lsp-extra pt-10 mb-0">2946</h2>
-                      <p class="mb-0 fs-12 fw-bold text-primary">Downloads</p>
+                      <h2 class="lsp-extra promo-stat pt-10 mb-0">2946</h2>
+                      <p class="mb-0 fs-12 promo-text fw-bold text-primary">Downloads</p>
                     </div>
                     <!-- / promo-container-big -->
                   </div>
@@ -112,13 +112,13 @@
                 <!-- / column -->
                 <div class="col-lg-12 col-xl-6">
                   <div class="promo-left">
-                    <div class="promo-container-big">
-                      <div class="promo-big promo-icon-bg circle bg-primary raised-sm">
+                    <div class="promo-container-big d-flex px-3">
+                      <div class="promo-big promo-icon-bg me-5 circle bg-primary raised-sm">
                         <i class="fas fa-user promo-icon text-white"></i>
                       </div>
                       <!-- / promo-icon-bg -->
-                      <h2 class="lsp-extra pt-10 mb-0">2175</h2>
-                      <p class="mb-0 fs-12 fw-bold text-primary">Users</p>
+                      <h2 class="lsp-extra promo-stat pt-10 mb-0">2175</h2>
+                      <p class="mb-0 fs-12 fw-bold promo-text text-primary">Users</p>
                     </div>
                     <!-- / promo-container-big -->
                   </div>
@@ -143,7 +143,7 @@
             <div class="card raised aos-init">
               <div class="card-body text-center">
                   <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini1.jpg" alt="">
-                  <p class="mb-5 fw-medium role fs-14 lsp-2x">Lead Developer</p>
+                  <p class="mb-2 fw-medium role fs-14 lsp-2x">Lead Developer</p>
                   <h6 class="card-title mb-20">Larry Lin</h6>
                   <a href="#" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
                   <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
@@ -158,7 +158,7 @@
             <div class="card raised aos-init">
               <div class="card-body text-center">
                 <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini2.jpg" alt="">
-                <p class="mb-5 fw-medium role fs-14 lsp-2x">Designer</p>
+                <p class="mb-2 fw-medium role fs-14 lsp-2x">Designer</p>
                 <h6 class="card-title mb-20">Sophia Perez</h6>
                 <a href="#" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
                 <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
@@ -173,7 +173,7 @@
           <div class="card raised aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
             <div class="card-body text-center">
               <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini7.jpg" alt="">
-              <p class="mb-5 fw-medium role fs-14 lsp-2x">Developer</p>
+              <p class="mb-2 fw-medium role fs-14 lsp-2x">Developer</p>
               <h6 class="card-title mb-20">Jacob Ginnish</h6>
               <a href="#" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
               <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
@@ -191,6 +191,87 @@
     </section>
     <!-- / about -->
   </div>
+
+  <!-- THE FEATURE SECTION -->
+  <section id="features" class="xl">
+    <div class="container">
+      <div class="row v-center">
+        <div class="col-lg-6 col-xl-4 tablet-lg-top-30">
+            <div class="promo-box promo-right text-right me-3">
+                <div class="promo-container">
+                    <i class="fas fa-eye promo-icon d-block mb-25 text-primary fa-3x"></i>
+                    <h6 class="box-title mb-15 fs-1 fw-bold">Premium Design</h6>
+                    <p class="box-description fs-4 text-secondary">Suspendisse tempus ante nulla, quis dignissim nisi maximus.</p>
+                </div>
+                <!-- / promo-container -->
+            </div>
+            <!-- / promo-box -->
+
+            <div class="promo-box promo-right text-right">
+                <div class="promo-container">
+                    <i class="fas fa-adjust promo-icon d-block mb-25 text-primary fa-4x"></i>
+                    <h6 class="box-title mb-15 fs-1 fw-bold">Easy to Customize</h6>
+                    <p class="box-description fs-4 text-secondary">Suspendisse tempus ante nulla, quis dignissim nisi maximus.</p>
+                </div>
+                <!-- / promo-container -->
+            </div>
+            <!-- / promo-box -->
+
+            <div class="promo-box promo-right text-right">
+                <div class="promo-container">
+                    <i class="fas fa-headset promo-icon d-block mb-25 text-primary fa-4x"></i>
+                    <h6 class="box-title mb-15 fs-1 fw-bold">Premium Support</h6>
+                    <p class="box-description fs-4 text-secondary">Suspendisse tempus ante nulla, quis dignissim nisi maximus.</p>
+                </div>
+                <!-- / promo-container -->
+            </div>
+            <!-- / promo-box -->
+        </div>
+        <!-- / column -->
+
+        <div class="col-lg-6 col-xl-4 tablet-xl-top-30">
+            <img src="/images/ph-tall1.png" alt="" class="rounded rellax" data-rellax-speed="1.5" data-rellax-percentage="0.5" style="transform: translate3d(0px, 57px, 0px);">
+        </div>
+        <!-- / column -->
+
+        <div class="col-lg-12 col-xl-4">
+          <div class="promo-box promo-left">
+              <div class="promo-container">
+                  <i class="fab fa-bootstrap promo-icon d-block mb-25 text-primary fa-4x"></i>
+                  <h6 class="box-title mb-15 fs-1 fw-bold">Bootstrap 5</h6>
+                  <p class="box-description fs-4 text-secondary">Suspendisse tempus ante nulla, quis dignissim nisi maximus.</p>
+              </div>
+              <!-- / promo-container -->
+          </div>
+          <!-- / promo-box -->
+
+          <div class="promo-box promo-left">
+              <div class="promo-container">
+                  <i class="fas fa-book-open promo-icon d-block mb-25 text-primary fa-4x"></i>
+                  <h6 class="box-title mb-15 fs-1 fw-bold">Well Documented</h6>
+                  <p class="box-description fs-4 text-secondary">Suspendisse tempus ante nulla, quis dignissim nisi maximus.</p>
+              </div>
+              <!-- / promo-container -->
+          </div>
+          <!-- / promo-box -->
+
+          <div class="promo-box promo-left">
+              <div class="promo-container">
+                  <i class="fas fa-expand promo-icon d-block mb-25 text-primary fa-4x"></i>
+                  <h6 class="box-title mb-15 fs-1 fw-bold">Responsive</h6>
+                  <p class="box-description fs-4 text-secondary">Suspendisse tempus ante nulla, quis dignissim nisi maximus.</p>
+              </div>
+              <!-- / promo-container -->
+          </div>
+          <!-- / promo-box -->
+        </div>
+        <!-- / column -->
+      </div>
+      <!-- / row -->
+    </div>
+    <!-- / container -->
+</section>
+<!-- / features -->
   
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
