--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <script src="https://kit.fontawesome.com/4c851905f3.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light container">
+  <nav class="navbar navbar-expand-lg navbar-light container">
     <div class=" container container-fluid rb-zeplin-selected">      
       <a class="navbar-brand" href="#">
         <img class="logo" src="images/logo.png" alt="MiOne Logo">
@@ -24,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link text-primary active px-lg-3" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -38,6 +39,7 @@
       </ul>
     </div>
   </nav>
+  
   <!-- HERO SECTION -->
   <header class="fh p-0 v-center bg-img img-bottom overflow-visible rb-zeplin-selected">
     <div class="container">
@@ -48,23 +50,19 @@
             <p class="lead w-80 mb-30">
               Mauris nunc risus, euismod sed metus sodales, gravida porttitor quam. Nulla at libero eu dolor placerat.
             </p>
-            <p class="text-dark fs-18 mb-10">Download App from:</p>            
-            <a href="#" class="btn btn-dark ml-0">
-              <i class="fa-brands fa-apple fa-2xl"></i>              
-              <span>App Store</span>
-            </a>            
-            <a href="#" class="btn btn-primary ml-0">              
-              <i class="fa-brands fa-google-play fa-2xl"></i>
-              <span>Google Play</span>
-            </a>            
+            <p class="text-dark fs-18 mb-10">Download App from:</p>
+            <a href="#" class="btn btn-dark ml-0"><i class="fa-brands fa-apple fa-2xl"></i><span>App Store</span></a>
+            <a href="#" class="btn btn-primary ml-0"><i class="fa-brands fa-google-play fa-2xl"></i><span>Google Play</span></a>
           </div>
           <div class="col-lg-6">
-            <img src="/images/ph-big4.png" alt="" class="z-index-1 relative rellax tablet-lg-hidden" data-rellax-speed="2" data-rellax-percentage="1.3" style="transform: translate3d(0px, 160px, 0px);">
+            <img src="/images/ph-big4.png" alt="" class="z-index-1 relative rellax tablet-lg-hidden" data-rellax-speed="2"
+              data-rellax-percentage="1.3" style="transform: translate3d(0px, 160px, 0px);">
           </div>
         </div>
       </div>
     </div>
   </header>
+
   <!-- ABOUT SECTION -->
   <div class="main-container p-0">
     <section id="about" class="xl bg-white">
@@ -81,16 +79,10 @@
               Convallis commodo elementum nec, varius eget nulla. Duis placerat pulvinar elit, nec blandit mi ornare eu. Nulla quis posuere diam. Morbi sed fermentum erat. Pellentesque ac mauris dapibus, fringilla mauris sed, volutpat enim.
             </p>
             <ul class="list-unstyled list-icon list-check list-success">
-              <li>
-                <i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Donec blandit dapibus ex eu euismod</span></li>
-              <li>
-                <i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Pellentesque habitant morbi tristique</span></li>
-              <li>
-                <i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Donec blandit dapibus ex eu euismod</span></li>
-              </li>
-              <li>
-                <i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Pellentesque habitant morbi tristique</span></li>
-              </li>
+              <li><i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Donec blandit dapibus ex eu euismod</span></li>
+              <li><i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Pellentesque habitant morbi tristique</span></li>
+              <li><i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Donec blandit dapibus ex eu euismod</span></li>
+              <li><i class="fa-solid fa-check fa-lg"></i> <span class="list-text">Pellentesque habitant morbi tristique</span></li>            
             </ul>
             <!-- / list-check -->
             <div class="promo-box pb-60 mt-40 raised">
@@ -145,9 +137,9 @@
                   <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini1.jpg" alt="">
                   <p class="mb-2 fw-medium role fs-14 lsp-2x">Lead Developer</p>
                   <h6 class="card-title mb-20">Larry Lin</h6>
-                  <a href="#" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
-                  <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
-                  <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
+                  <a href="#x" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
+                  <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
+                  <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
               </div>
               <!-- / card-body -->
             </div>
@@ -160,9 +152,9 @@
                 <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini2.jpg" alt="">
                 <p class="mb-2 fw-medium role fs-14 lsp-2x">Designer</p>
                 <h6 class="card-title mb-20">Sophia Perez</h6>
-                <a href="#" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
-                <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
-                <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
+                <a href="#x" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
+                <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
+                <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
               </div>
               <!-- / card-body -->
             </div>
@@ -175,9 +167,9 @@
               <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini7.jpg" alt="">
               <p class="mb-2 fw-medium role fs-14 lsp-2x">Developer</p>
               <h6 class="card-title mb-20">Jacob Ginnish</h6>
-              <a href="#" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
-              <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
-              <a href="#" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
+              <a href="#x" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
+              <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
+              <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
             </div>
             <!-- / card-body -->
           </div>
@@ -272,7 +264,125 @@
     <!-- / container -->
 </section>
 <!-- / features -->
-  
+
+<!-- TESTIMONIALS -->
+<section id="testimonials" class="xl bg-white">
+  <div class="container">
+    <h3 class="section-title hidden text-center mb-60 aos-init aos-animate" data-aos="fade-down">Happy Customers</h3>
+    <div id="testimonials-slider" class="swiper-container dark-nav swiper-initialized swiper-horizontal swiper-pointer-events">
+      <div class="swiper-wrapper" id="swiper-wrapper-0273fccd3e459cc7" aria-live="polite" style="transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
+        <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 3" style="width: 1296px;">
+          <div class="card bg-transparent no-shadow no-blur mb-0">
+            <div class="card-body text-center">
+              <img class="mb-20 circle raised-sm" src="/images/ph-mini4.jpg" alt="" style="max-width: 150px;">
+              <p class="ratings mb-0">
+                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+                <i class="fas fa-star va-middle fa-xl"></i>
+                <i class="fas fa-star fs-20 va-middle fa-2xl "></i>
+                <i class="fas fa-star va-middle fa-xl"></i>
+                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+              </p>
+              <!-- / ratings -->
+              <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
+              <p class="mb-0 fs-5 text-secondary">- Sophia Perez | Airbnb.com</p>
+            </div>
+            <!-- / card-body -->
+          </div>
+          <!-- / card -->
+        </div>
+        <!-- / swiper-slide -->
+
+        <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 3" style="width: 1296px;">
+          <div class="card bg-transparent no-shadow no-blur mb-0">
+            <div class="card-body text-center">
+              <img class="mb-20 circle raised-sm" src="/images/ph-mini3.jpg" alt="" style="max-width: 150px;">
+              <p class="ratings mb-0">
+                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+                <i class="fas fa-star va-middle fa-xl"></i>
+                <i class="far fa-star fs-20 va-middle fa-2xl"></i>
+                <i class="fas fa-star va-middle fa-xl"></i>
+                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+              </p>
+              <!-- / ratings -->
+              <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
+              <p class="mb-0 fs-5 text-secondary">- Jacob Ginnish | Google.com</p>
+            </div>
+            <!-- / card-body -->
+          </div>
+          <!-- / card -->
+        </div>
+        <!-- / swiper-slide -->
+        <div class="swiper-slide" role="group" aria-label="3 / 3" style="width: 1296px;">
+            <div class="card bg-transparent no-shadow no-blur mb-0">
+                <div class="card-body text-center">
+                    <img class="mb-20 circle raised-sm" src="/images/ph-mini6.jpg" alt="" style="max-width: 150px;">
+                    <p class="ratings mb-0">
+                        <i class="fas fa-star fs-12 va-middle  fa-lg"></i>
+                        <i class="fas fa-star va-middle fa-xl"></i>
+                        <i class="fas fa-star-half-alt fs-20 va-middle fa-2xl"></i>
+                        <i class="fas fa-star va-middle fa-xl"></i>
+                        <i class="fas fa-star fs-12 va-middle  fa-lg"></i>
+                    </p>
+                    <!-- / ratings -->
+                    <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
+                    <p class="mb-0 fs-5 text-secondary">- Macy Maher | Apple.com</p>
+                </div>
+                <!-- / card-body -->
+            </div>
+            <!-- / card -->
+        </div>
+        <!-- / swiper-slide -->
+      </div>
+      <!-- / swiper-wrapper -->
+
+      <!-- Add Arrows -->
+      <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-0273fccd3e459cc7" aria-disabled="false"></div>
+      <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-0273fccd3e459cc7" aria-disabled="true"></div>
+    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+    <!-- / testimonials-slider -->
+  </div>
+  <!-- / container -->
+</section>
+
+<!-- DOWNLOAD APP -->
+<section id="app" class="xxl text-center my-lg-5">
+  <div class="container relative">
+    <h2 class="section-title mb-15">DOWNLOAD APP</h2>
+    <p class="lead w-30 m-x-auto mb-30">Quisque fringilla volutpat libero, a molestie sem venenatis sit amet.</p>
+    <a href="#x" class="btn btn-dark ml-0"><i class="fa-brands fa-apple fa-2xl"></i><span>App Store</span></a>            
+    <a href="#x" class="btn btn-primary ml-0"><i class="fa-brands fa-google-play fa-2xl"></i><span>Google Play</span></a> 
+  </div>
+  <!-- / container -->
+</section>
+
+<!-- FOOTER -->
+<footer class="bg-white">
+  <div class="container">
+    <div class="row v-center mobile-center d-flex mx-auto text-center">
+      <div class="col-md-4 footer-left-area tablet-top">
+        <p>© 2021 MiOne by <a href="https://kingstudio.ro" target="_blank">KingStudio</a></p>
+      </div>
+      <!-- / footer-left-area -->
+      <div class="col-md-8 footer-right-area">
+        <p class="footer-social">
+          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary mr-10"><i class="fab fa-facebook-f"></i></a>
+          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary mr-10"><i class="fab fa-twitter"></i></a>
+          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary"><i class="fab fa-instagram"></i></a>
+        </p>
+        <!-- / footer-social -->
+      </div>
+      <!-- / footer-right-area -->
+    </div>
+    <!-- / row -->
+  </div>
+  <!-- / container -->
+</footer>
+<!-- / footer -->
+
+<!-- BACK-TO-TOP BUTTON -->
+<button type="button" id="back-top" class="btn btn-icon btn-circle btn-primary btn-floating raised-sm" style="display: block;">
+  <i class="fas fa-chevron-up"></i>
+</button>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
