refactor bootstrap classes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-12 col-xl-6 tablet-xl-top-45">
                   <div class="promo-left">
                     <div class="promo-container-big d-flex px-3">
-                      <div class="promo-big promo-icon-bg me-5 circle bg-primary raised-sm">
+                      <div class="promo-big promo-icon-bg me-5 circle rounded-circle bg-primary raised-sm">
                         <i class="fas fa-download promo-icon text-white fa-2xl"></i>
                       </div>
                       <!-- / promo-icon-bg -->
@@ -105,7 +105,7 @@
                 <div class="col-lg-12 col-xl-6">
                   <div class="promo-left">
                     <div class="promo-container-big d-flex px-3">
-                      <div class="promo-big promo-icon-bg me-5 circle bg-primary raised-sm">
+                      <div class="promo-big promo-icon-bg me-5 circle rounded-circle bg-primary raised-sm">
                         <i class="fas fa-user promo-icon text-white"></i>
                       </div>
                       <!-- / promo-icon-bg -->
@@ -137,9 +137,9 @@
                   <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini1.jpg" alt="">
                   <p class="mb-2 fw-medium role fs-14 lsp-2x">Lead Developer</p>
                   <h6 class="card-title mb-20">Larry Lin</h6>
-                  <a href="#x" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
-                  <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
-                  <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
+                  <a href="#x" class="btn btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
+                  <a href="#x" class="btn btn-xs btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
+                  <a href="#x" class="btn btn-xs btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
               </div>
               <!-- / card-body -->
             </div>
@@ -152,9 +152,9 @@
                 <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini2.jpg" alt="">
                 <p class="mb-2 fw-medium role fs-14 lsp-2x">Designer</p>
                 <h6 class="card-title mb-20">Sophia Perez</h6>
-                <a href="#x" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
-                <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
-                <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
+                <a href="#x" class="btn btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
+                <a href="#x" class="btn btn-xs btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
+                <a href="#x" class="btn btn-xs btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
               </div>
               <!-- / card-body -->
             </div>
@@ -167,9 +167,9 @@
               <img class="mb-30 circle" style="max-width:150px" src="/images/ph-mini7.jpg" alt="">
               <p class="mb-2 fw-medium role fs-14 lsp-2x">Developer</p>
               <h6 class="card-title mb-20">Jacob Ginnish</h6>
-              <a href="#x" class="btn btn-primary btn-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
-              <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
-              <a href="#x" class="btn btn-xs btn-primary btn-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
+              <a href="#x" class="btn btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fas fa-phone fa-rotate-45 fa-lg"></i></a>
+              <a href="#x" class="btn btn-xs btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
+              <a href="#x" class="btn btn-xs btn-primary btn-circle rounded-circle btn-icon m-2"><i class="fas fa-envelope fa-lg"></i></a>
             </div>
             <!-- / card-body -->
           </div>
@@ -266,89 +266,78 @@
 <!-- / features -->
 
 <!-- TESTIMONIALS -->
-<section id="testimonials" class="xl bg-white">
+<!-- BOOTSTRAP CAROUSEL -->
+<section id="testimonials" class="xl bg-white  border-0">
   <div class="container">
     <h3 class="section-title hidden text-center mb-60 aos-init aos-animate" data-aos="fade-down">Happy Customers</h3>
-    <div id="testimonials-slider" class="swiper-container dark-nav swiper-initialized swiper-horizontal swiper-pointer-events">
+    <div id="testimonials-slider" class="swiper-container dark-nav swiper-initialized swiper-horizontal swiper-pointer-events">      
       <div class="swiper-wrapper" id="swiper-wrapper-0273fccd3e459cc7" aria-live="polite" style="transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
         <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 3" style="width: 1296px;">
           <div class="card bg-transparent no-shadow no-blur mb-0">
-            <div class="card-body text-center">
-              <img class="mb-20 circle raised-sm" src="/images/ph-mini4.jpg" alt="" style="max-width: 150px;">
-              <p class="ratings mb-0">
-                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
-                <i class="fas fa-star va-middle fa-xl"></i>
-                <i class="fas fa-star fs-20 va-middle fa-2xl "></i>
-                <i class="fas fa-star va-middle fa-xl"></i>
-                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
-              </p>
-              <!-- / ratings -->
-              <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
-              <p class="mb-0 fs-5 text-secondary">- Sophia Perez | Airbnb.com</p>
-            </div>
-            <!-- / card-body -->
-          </div>
-          <!-- / card -->
-        </div>
-        <!-- / swiper-slide -->
-
-        <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 3" style="width: 1296px;">
-          <div class="card bg-transparent no-shadow no-blur mb-0">
-            <div class="card-body text-center">
-              <img class="mb-20 circle raised-sm" src="/images/ph-mini3.jpg" alt="" style="max-width: 150px;">
-              <p class="ratings mb-0">
-                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
-                <i class="fas fa-star va-middle fa-xl"></i>
-                <i class="far fa-star fs-20 va-middle fa-2xl"></i>
-                <i class="fas fa-star va-middle fa-xl"></i>
-                <i class="fas fa-star fs-12 va-middle fa-lg"></i>
-              </p>
-              <!-- / ratings -->
-              <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
-              <p class="mb-0 fs-5 text-secondary">- Jacob Ginnish | Google.com</p>
-            </div>
-            <!-- / card-body -->
-          </div>
-          <!-- / card -->
-        </div>
-        <!-- / swiper-slide -->
-        <div class="swiper-slide" role="group" aria-label="3 / 3" style="width: 1296px;">
-            <div class="card bg-transparent no-shadow no-blur mb-0">
-                <div class="card-body text-center">
-                    <img class="mb-20 circle raised-sm" src="/images/ph-mini6.jpg" alt="" style="max-width: 150px;">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active card-body text-center">
+                  <img class="mb-20 circle raised-sm" src="/images/ph-mini4.jpg" alt="" style="max-width: 150px;">
                     <p class="ratings mb-0">
-                        <i class="fas fa-star fs-12 va-middle  fa-lg"></i>
-                        <i class="fas fa-star va-middle fa-xl"></i>
-                        <i class="fas fa-star-half-alt fs-20 va-middle fa-2xl"></i>
-                        <i class="fas fa-star va-middle fa-xl"></i>
-                        <i class="fas fa-star fs-12 va-middle  fa-lg"></i>
+                      <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+                      <i class="fas fa-star va-middle fa-xl"></i>
+                      <i class="fas fa-star fs-20 va-middle fa-2xl "></i>
+                      <i class="fas fa-star va-middle fa-xl"></i>
+                      <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+                    </p>
+                    <!-- / ratings -->
+                    <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
+                    <p class="mb-0 fs-5 text-secondary">- Sophia Perez | Airbnb.com</p>
+                </div>
+                <div class="carousel-item card-body text-center">
+                  <img class="mb-20 circle raised-sm" src="/images/ph-mini3.jpg" alt="" style="max-width: 150px;">
+                    <p class="ratings mb-0">
+                      <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+                      <i class="fas fa-star va-middle fa-xl"></i>
+                      <i class="far fa-star fs-20 va-middle fa-2xl"></i>
+                      <i class="fas fa-star va-middle fa-xl"></i>
+                      <i class="fas fa-star fs-12 va-middle fa-lg"></i>
+                    </p>
+                    <!-- / ratings -->
+                    <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
+                    <p class="mb-0 fs-5 text-secondary">- Jacob Ginnish | Google.com</p>
+                </div>
+                <div class="carousel-item card-body text-center">
+                  <img class="mb-20 circle raised-sm" src="/images/ph-mini6.jpg" alt="" style="max-width: 150px;">
+                    <p class="ratings mb-0">
+                      <i class="fas fa-star fs-12 va-middle  fa-lg"></i>
+                      <i class="fas fa-star va-middle fa-xl"></i>
+                      <i class="fas fa-star-half-alt fs-20 va-middle fa-2xl"></i>
+                      <i class="fas fa-star va-middle fa-xl"></i>
+                      <i class="fas fa-star fs-12 va-middle  fa-lg"></i>
                     </p>
                     <!-- / ratings -->
                     <p class="card-text mb-15 fs-4 text-secondary">Etiam in gravida ligula. Phasellus a blandit.</p>
                     <p class="mb-0 fs-5 text-secondary">- Macy Maher | Apple.com</p>
                 </div>
-                <!-- / card-body -->
+              </div>
+              <button class="carousel-control-prev text-primary" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="false"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next text-primary" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="false"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <!-- / card -->
+          </div>
         </div>
-        <!-- / swiper-slide -->
       </div>
-      <!-- / swiper-wrapper -->
-
-      <!-- Add Arrows -->
-      <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-0273fccd3e459cc7" aria-disabled="false"></div>
-      <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-0273fccd3e459cc7" aria-disabled="true"></div>
-    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-    <!-- / testimonials-slider -->
+    </div>
   </div>
-  <!-- / container -->
 </section>
+<!-- / BOOTSTRAP CAROUSEL -->
 
 <!-- DOWNLOAD APP -->
 <section id="app" class="xxl text-center my-lg-5">
   <div class="container relative">
     <h2 class="section-title mb-15">DOWNLOAD APP</h2>
-    <p class="lead w-30 m-x-auto mb-30">Quisque fringilla volutpat libero, a molestie sem venenatis sit amet.</p>
+    <p class="lead download w-30 m-x-auto mb-30">Quisque fringilla volutpat libero, a molestie sem venenatis sit amet.</p>
     <a href="#x" class="btn btn-dark ml-0"><i class="fa-brands fa-apple fa-2xl"></i><span>App Store</span></a>            
     <a href="#x" class="btn btn-primary ml-0"><i class="fa-brands fa-google-play fa-2xl"></i><span>Google Play</span></a> 
   </div>
@@ -360,14 +349,14 @@
   <div class="container">
     <div class="row v-center mobile-center d-flex mx-auto text-center">
       <div class="col-md-4 footer-left-area tablet-top">
-        <p>© 2021 MiOne by <a href="https://kingstudio.ro" target="_blank">KingStudio</a></p>
+        <p id="copyright">© 2021 MiOne by <a href="https://kingstudio.ro" target="_blank">KingStudio</a></p>
       </div>
       <!-- / footer-left-area -->
       <div class="col-md-8 footer-right-area">
         <p class="footer-social">
-          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary mr-10"><i class="fab fa-facebook-f"></i></a>
-          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary mr-10"><i class="fab fa-twitter"></i></a>
-          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary"><i class="fab fa-instagram"></i></a>
+          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary mr-5"><i class="fab fa-facebook-f fa-lg"></i></a>
+          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary m-lg-3"><i class="fab fa-twitter fa-lg"></i></a>
+          <a href="#x" class="btn btn-xs btn-icon btn-circle btn-primary"><i class="fab fa-instagram fa-lg"></i></a>
         </p>
         <!-- / footer-social -->
       </div>
@@ -380,9 +369,11 @@
 <!-- / footer -->
 
 <!-- BACK-TO-TOP BUTTON -->
-<button type="button" id="back-top" class="btn btn-icon btn-circle btn-primary btn-floating raised-sm" style="display: block;">
-  <i class="fas fa-chevron-up"></i>
-</button>
+<div class="btn-back-top container float-right">
+  <button type="button" id="back-top" class="btn btn-icon btn-circle btn-primary btn-floating raised-sm" style="display: block;">
+    <i class="fas fa-chevron-up"></i>
+  </button>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
